@@ -22,6 +22,10 @@ Changes in backwards compatibility policy
 
 * LUCENE-2190: Removed deprecated customScore() and customExplain()
   methods from experimental CustomScoreQuery.  (Uwe Schindler)
+  
+* LUCENE-2286: Enabled DefaultSimilarity.setDiscountOverlaps by default.
+  This means that terms with a position increment gap of zero do not
+  affect the norms calculation by default.  (Robert Muir)
 
 Changes in runtime behavior
 
